Adding configuration to containerize the entire application

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 ### Configuration MongoDB ###
 
 spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.host=0.0.0.0
+spring.data.mongodb.host=mongo
 spring.data.mongodb.port=7777
+spring.data.mongodb.database=sales-products
 spring.data.mongodb.username=user1
 spring.data.mongodb.password=password1
 
