--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,22 +3,36 @@ version: '3.8'
 services:
 
   mongo:
-    container_name: product-mongodb-poc
+    container_name: mongo-database
     image: mongo
     restart: always
     ports:
-      - 7777:27017
+      - "7777:27017"
     environment:
       MONGO_INITDB_ROOT_USERNAME: user1
       MONGO_INITDB_ROOT_PASSWORD: password1
 
   mongo-express:
-    container_name: product-mongo-express-poc
+    # Instruction to make Docker started the mongo image
+    # before this one
+    depends_on:
+      - mongo
+    container_name: mongo-express
     image: mongo-express
     restart: always
     ports:
-      - 7799:8081
+      - "7799:8081"
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
       ME_CONFIG_MONGODB_ADMINPASSWORD: example
       ME_CONFIG_MONGODB_URL: mongodb://user1:password1@mongo:27017/
+
+  app:
+    container_name: api-app
+    depends_on:
+      - mongo
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "8888:8888"
