Setting session handle and stored by mongo

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,3 +6,7 @@ spring.data.mongodb.port=7777
 spring.data.mongodb.database=sales-products
 spring.data.mongodb.username=user1
 spring.data.mongodb.password=password1
+
+### Configuration Session ###
+spring.session.store-type=mongodb
+spring.session.timeout=60
